2014-10-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* db.c (db_names): Use initialized non-const strings to avoid warning.

2014-10-19  Karl Berry  <karl@tug.org>

	* db.c (db_names): list DB_NAME_LC first, and list both always,
	dropping WIN32 conditional.
	(init_db): check at runtime if ls-R and ls-R are same_file_p,
	and only read one on any system, not just hardwiring Windows.
	Output debugging lines.  Basic patch from Adam Maxwell
	(since MacOSX now uses a case-preserving filesystem).
	
	* db.c (DB_HASH_SIZE): increase per current texmf-dist/ls-R.
	
2014-10-17  Karl Berry  <karl@tug.org>

	* line.c (getc, FLOCKFILE, FUNLOCKFILE): #define to getc_unlocked, etc.
	(get_line): call them, so we lock once per call instead of
	once per character read.  Change from Adam Maxwell <amaxwell@mac.com>.
	https://email.esm.psu.edu/pipermail/macosx-tex/2014-October/053026.html

2014-09-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.cnf (TEX.upmpost): Added.

2014-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c (win32_fputs): Drop unused variables.

2014-08-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* knj.c: Update fsyscp_popen().

2014-08-22  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch], c-std.h, config.h: Add a new function win32_vfprintf()
	(Windows only)

2014-07-22  Karl Berry  <karl@tug.org>

	* tex-file.h,
	* tex-file.c (kpathsea_init_format_return_varlist): new fn
	to expose list of environment/config variable names considered.
	* kpsewhich.c (help_message): use it.

2014-07-18  Karl Berry  <karl@tug.org>

	* mktex.opt: don't basename-ify the program name, that's
	potentially useful information.
	
	* mktexdir,
	* mktexlsr, 
	* mktexmf,
	* mktexnam,
	* mktexpk,
	* mktextfm,
	* mktexupd: prepend to PATH via a simple method for Unix
	(but leave the complicated DOS version in mktexlsr).

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex-make.c, win32lib.c: Replace the deprecated spawnvp() by
	_spawnvp(), they differ for 64-bit MinGW.
